MFH: 	fix for bug #28817 (properties don't work in extended class) 	fix for bug #30890 (testsuite)